fix: Prevent Capture button from taking too much space

--- a/src/renderer/routes/Search.css
+++ b/src/renderer/routes/Search.css
@@ -11,3 +11,7 @@
 .Search__Screenshot.Search__Screenshot--Ongoing {
   color: #888;
 }
+
+.Search__Screenshot__Container {
+  display: flex;
+}
